# rag-drift-detection

./: LICENSE  README.md  bad_questions.txt  good_questions.txt  pyproject.toml  requirements.txt  run_demo.py  run_test.py
.drift_snapshots/2024-07-01/: meta.json
.drift_snapshots/2024-07-02/: embeddings.npy  meta.json
.drift_snapshots_test/2024-07-01/: embeddings.npy  meta.json
.drift_snapshots_test/2024-07-02/: embeddings.npy  meta.json
embedding_drift/: __init__.py  cli.py
embedding_drift.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
embedding_drift/core/: __init__.py  drift.py  snapshot.py
embedding_drift/viz/: __init__.py  plots.py
rag_pipeline/: rag.py
rag_pipeline/data/: company_policy.txt
tests/: test_drift.py
