[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-drift"
version = "0.1.0"
description = "Track and visualize embedding space drift over time"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
rag = [
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-ollama>=0.1",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
]

[tool.setuptools.packages.find]
include = ["embedding_drift*"]
