[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-drift"
version = "0.1.0"
description = "Detect and visualize embedding space drift in RAG systems and vector databases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Nipun"},
]
keywords = ["embeddings", "drift-detection", "rag", "vector-database", "monitoring", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
embedding-drift = "embedding_drift.cli:main"

[project.urls]
Homepage = "https://github.com/nipun/embedding-drift"
Issues = "https://github.com/nipun/embedding-drift/issues"

[tool.setuptools.packages.find]
include = ["embedding_drift*"]
